samples/_failures_safe/1761472050_c1f79c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ab0e2a5.c: In function ‘main’:
./samples/SAFE/__tmp_5ab0e2a5.c:158:28: error: missing terminating " character
  158 |                     printf("Result of A + B:\
      |                            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5ab0e2a5.c:158:21: error: expected expression at end of input
  158 |                     printf("Result of A + B:\
      |                     ^~~~~~
./samples/SAFE/__tmp_5ab0e2a5.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ab0e2a5.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ab0e2a5.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ab0e2a5.c:158:21: error: expected declaration or statement at end of input
